force-app/main/default/objects/Charter_RACI__c/Charter_RACI__c.object-meta.xml
<CustomObject>
    <label>Charter RACI</label>
    <nameField>
        <displayFormat>RACI-{0000}</displayFormat>
        <label>RACI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charter RACIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>