force-app/main/default/objects/Charter_RACI__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>