force-app/main/default/objects/Charter_RACI__c/fields/Activity_Order__c.field-meta.xml
<CustomField>
    <fullName>Activity_Order__c</fullName>
    <label>Activity Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>