force-app/main/default/objects/Charter_RACI__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <label>Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>R</fullName><default>false</default><label>R</label></value>
            <value><fullName>A</fullName><default>false</default><label>A</label></value>
            <value><fullName>C</fullName><default>false</default><label>C</label></value>
            <value><fullName>I</fullName><default>false</default><label>I</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>