force-app/main/default/objects/Charter_RACI__c/fields/Charter__c.field-meta.xml
<CustomField>
    <fullName>Charter__c</fullName>
    <label>Charter</label>
    <referenceTo>ProjectCharter__c</referenceTo>
    <relationshipLabel>RACI Items</relationshipLabel>
    <relationshipName>RACIItems</relationshipName>
    <type>MasterDetail</type>
</CustomField>