force-app/main/default/objects/Charter_RACI__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Charter RACI Roles</relationshipLabel>
    <relationshipName>Charter_RACI_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>