force-app/main/default/objects/Charter_RACI__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Charter RACI Roles</relationshipLabel>
    <relationshipName>Charter_RACI_User_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>